--- a/Reproducibility/Fig 1/HsLang-Seq.ipynb
+++ b/Reproducibility/Fig 1/HsLang-Seq.ipynb
@@ -5,7 +5,7 @@
    "id": "2f41ebab",
    "metadata": {},
    "source": [
-    "In this entry, the module identification program is modified to consider the entire Latin alphabet (26 letters) instead of just the 20 used to represent the amino acids. This will allow us to analyze a synthetic sequence made of a single quote translated into different languages to demonstrate the signficance of this method. "
+    "In this entry, the Chi-Score Analysis is modified to consider the entire Latin alphabet (26 letters) instead of just the 20 used to represent the amino acids. This will allow us to analyze a synthetic sequence made of a single quote translated into different languages to demonstrate the signficance of this method. "
    ]
   },
   {
